spacing fixed

--- a/main.css
+++ b/main.css
@@ -899,7 +899,7 @@ header .content .countdown {
 /*Accordion (FAQ)*/
 
 .faq {
-    margin-top:1%;
+    margin-top:5px;
 }
 
 .faq a {
